# rustomance

./: .gitignore  Cargo.toml  README.md  build.rs  flash.sh  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
