[package]
name = "stm32f446re-project"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "stm32f446re",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] 
}
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }


defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.9.3"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3.0"
mipidsi = "0.10.0"

[profile.dev]
debug = 2
opt-level = 1

[profile.release]
debug = 2
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
embedded-graphics = "0.8"
embedded-hal-bus = "0.2"
mipidsi = "0.9"
heapless = "0.8"
